# NewRepo

./: CMakeLists.txt  README.md
.github/workflows/: cigit.yml
App/: CMakeLists.txt
App/include/: App.hpp
App/src/: App.cpp
config/: .clang-format  .clang-tidy
src/: imdbdataanalyze.cpp
tests/: CMakeLists.txt  unittests.cpp
